# 9S

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cleanup.sh  jarvis_gui.py  jarviscore.py  launch-guide.tsx  project structure.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  setup.py  uninstall.sh
.github/workflows/: ci.yml
config/: automation_rules.json  jarvis_config.json  scenes.json
jarvis/: __init__.py  __main__.py  settings.py
jarvis/components/audio/: audio_component.py
jarvis/components/audio/processors/: speech_recognition.py  text_to_speech.py
jarvis/components/automation/: automation_component.py
jarvis/components/automation/controllers/: base_controller.py  blinds_controller.py  game_console_controller.py  light_controller.py  scene_manager.py  tv_controller.py
jarvis/components/memory/: memory_component.py
jarvis/components/vision/: __init__.py  vision_component.py
jarvis/core/: __init__.py  base_component.py  jarvis_core.py  message.py
jarvis/utils/: logging_utils.py
jarvis/web/: backup.py  metrics.py  security.py  server.py
jarvis/web/static/: dashboard.js  index.html
scripts/: download_models.py  install.sh  setup_ssl.sh
tests/: conftest.py  manual_audio_test.py  run_test.py  test_accessors.py  test_blinds.py  test_component.py  test_core.py  test_memory.py  test_message.py  test_scene_manager.py  test_security.py  test_settings.py
tests/components/audio/: test_audio_component.py
tests/vision/: test_vision_component.py
(+4 files in other folders)
